--- a/package.json
+++ b/package.json
@@ -48,12 +48,8 @@
     "@mui/material": "^5.0.0",
     "@mui/utils": "^5.0.0",
     "@testing-library/jest-dom": "^5.14.1",
-    "apexcharts": "^3.28.3",
     "axios": "^0.24.0",
-    "change-case": "^4.1.2",
     "date-fns": "^2.24.0",
-    "faker": "^5.5.3",
-    "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
     "history": "^5.0.1",
     "jwt-decode": "^3.1.2",
@@ -61,7 +57,6 @@
     "numeral": "^2.0.6",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
-    "react-apexcharts": "^1.3.9",
     "react-dom": "^17.0.2",
     "react-helmet-async": "^1.1.2",
     "react-map-gl": "^5.2.5",
@@ -70,8 +65,7 @@
     "react-scripts": "^4.0.1",
     "simplebar": "^5.3.5",
     "simplebar-react": "^2.3.5",
-    "web-vitals": "^2.1.0",
-    "yup": "^0.32.9"
+    "web-vitals": "^2.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.15.5",
