--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,7 @@ jobs:
         host: 'host244.checkdomain.de'
         port: 21
         agent: ''
-        username: 'u96548892-app'
+        username: 'onhnkzyt8'
         password: 'Berlin2022$$.'
         localPath: './build/'
         remotePath: './'
