--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,6 +38,6 @@ jobs:
         server: 'host244.checkdomain.de'
         port: 21
         username: 'onhnkzyt8'
-        password: 'Berlin2022$$.'
+        password: ${{ secrets.ftp_password }}
         local-dir: './build/'
         server-dir: './'
