--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@mui/utils": "^5.0.0",
     "@testing-library/jest-dom": "^5.14.1",
     "axios": "^0.24.0",
+    "date-fns": "^2.28.0",
     "framer-motion": "^4.1.17",
     "history": "^5.0.1",
     "jwt-decode": "^3.1.2",
